# LITL

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
demos/Template/: CMakeLists.txt
demos/Template/include/: template.hpp
demos/Template/src/: main.cpp  template.cpp
demos/Triangle/: CMakeLists.txt
demos/Triangle/include/: triangleProgram.hpp
demos/Triangle/src/: main.cpp  triangleProgram.cpp
litl/core/: CMakeLists.txt
litl/core/include/litl-core/: alignment.hpp  assert.hpp  authority.hpp  constants.hpp  debug.hpp  enumBitFlags.hpp  handles.hpp  hash.hpp  impl.hpp  inlineFunc.hpp  logger.hpp  math.hpp  refPtr.hpp  stringId.hpp  thread.hpp  traits.hpp  types.hpp  window.hpp
litl/core/include/litl-core/containers/: alignedByteBuffer.hpp  common.hpp  concurrentQueue.hpp  concurrentSingleQueue.hpp  fixedSortedArray.hpp  flatHashMap.hpp  flatHashMap.inl  flatHashSet.hpp  flatHashSet.inl  memoryArena.hpp  memoryPool.hpp  pagedVector.hpp  ringBuffer.hpp
litl/core/include/litl-core/fiber/: README.md
litl/core/include/litl-core/handles/: pooledHandle.hpp  (+1 more)
litl/core/include/litl-renderer/: handles.hpp  renderer.hpp  rendererConfiguration.hpp  rendererDescriptor.hpp  rendererTypes.hpp  resourceAllocator.hpp
litl/core/src/: deleteme.cpp
litl/core/src/litl-core/: deleteme.cpp  hash.cpp  logger.cpp  thread.cpp  types.cpp
litl/core/src/litl-renderer/: rendererConfiguration.cpp
litl/ecs/: CMakeLists.txt
litl/ecs/include/litl-ecs/: README.md  commandBuffer.hpp  component.hpp  componentRegistry.hpp  constants.hpp  entity.hpp  entityRecord.hpp  entityRegistry.hpp  frameCallbacks.hpp  register.hpp  world.hpp
litl/ecs/src/litl-ecs/: component.cpp  componentRegistry.cpp  entityRegistry.cpp  world.cpp
litl/engine/: CMakeLists.txt
litl/engine/include/litl-engine/: bootstrap.hpp  config.hpp  engine.hpp  engineCallbacks.hpp  frameLimiter.hpp  framePacer.hpp  rendererFactory.hpp  startup.hpp  windowFactory.hpp
litl/engine/src/: bootstrap.cpp  cmonintellisense.cpp  config.cpp  engine.cpp  engineCallbacks.cpp  frameLimiter.cpp  framePacer.cpp  rendererFactory.cpp  windowFactory.cpp
litl/engine/src/cache/: pipelineLayoutCache.cpp
litl/engine/src/containers/: containerSpecializations.cpp
litl/engine/src/ecs/: component.cpp  componentRegistry.cpp  entityRegistry.cpp  world.cpp
litl/engine/src/objects/: camera.cpp  gpuBuffer.cpp  material.cpp  mesh.cpp  objectPool.cpp
litl/engine/src/render/: renderManager.cpp  renderPass.cpp
litl/engine/src/scene/: scene.cpp  sceneCameras.cpp  sceneChangeProcessor.cpp  sceneCommandProcessor.cpp  sceneCulling.cpp  sceneData.cpp  sceneManager.cpp  sceneObject.cpp  sceneTransforms.cpp  sceneTree.cpp  sceneView.cpp  scenegraph.cpp
litl/renderer/: CMakeLists.txt
litl/renderer-vulkan/: CMakeLists.txt
litl/renderer-vulkan/include/litl-core-vulkan/: window.hpp
litl/renderer-vulkan/include/litl-renderer-vulkan/: common.hpp  conversions.hpp  gpuBuffer.hpp  integration.hpp  queueFamily.hpp  renderContext.hpp  renderer.hpp  rendererContext.hpp  resourceAllocator.hpp  resourceManager.hpp  swapChainSupport.hpp  swapchainSupport.hpp  window.hpp
litl/renderer-vulkan/src/litl-core-vulkan/: window.cpp
litl/renderer-vulkan/src/litl-renderer-vulkan/: conversions.cpp  gpuBuffer.cpp  queueFamily.cpp  renderer.cpp  rendererDrawOps.cpp  resourceAllocator.cpp  resourceManager.cpp  swapChainSupport.cpp  swapchainSupport.cpp  vmaImpl.cpp  window.cpp
litl/renderer/include/litl-renderer/: commands.hpp  constants.hpp  enums.hpp  frameData.hpp  gpuBuffer.hpp  handles.hpp  reflection.hpp  renderer.hpp  rendererConfiguration.hpp  rendererTypes.hpp  resourceAllocator.hpp  resourceManager.hpp  resources.hpp  result.hpp  scopedBufferUpload.hpp  window.hpp
litl/renderer/src/litl-renderer/: reflection.cpp  renderer.cpp  rendererConfiguration.cpp  scopedBufferUpload.cpp
samples/renderer/: CMakeLists.txt  README.md
samples/renderer/assets/shaders/: triangleSample.slang
samples/renderer/src/: main.cpp
samples/triangle/: CMakeLists.txt  README.md
samples/triangle/include/: spinSystem.hpp
samples/triangle/src/: main.cpp
tests/: CMakeLists.txt
tests/data/: test.slang  test.spv
tests/include/: tests.hpp
tests/include/litl-ecs/: common.hpp  tests-common.hpp
tests/include/litl-engine/ecs/: ecsCommon.hpp
tests/src/litl-core/: assert_tests.cpp  handles_tests.cpp  hash_tests.cpp  refptr_tests.cpp  threadinfo_tests.cpp  types_tests.cpp
tests/src/litl-core/containers/: alignedByteBuffer_tests.cpp  concurrentQueue_tests.cpp  concurrentSingleQueue_tests.cpp  fixedSortedArray_tests.cpp  flatHashMap_tests.cpp  flatHashSet_tests.cpp  memoryArena_tests.cpp  memoryPool_tests.cpp  pagedVector_tests.cpp  ringBuffer_tests.cpp
tests/src/litl-core/ecs/: archetype_tests.cpp  chunk_tests.cpp  component_tests.cpp  entity_tests.cpp  world_tests.cpp
tests/src/litl-core/job/: jobDeque_tests.cpp  jobPool_tests.cpp  jobScheduler_tests.cpp  job_tests.cpp
tests/src/litl-core/logging/: logging_tests.cpp
tests/src/litl-core/math/: bounds_tests.cpp  dag_tests.cpp  general_math_tests.cpp  general_tests.cpp  mat3_tests.cpp  mat4_tests.cpp  quat_tests.cpp  random_tests.cpp  types_tests.cpp  vec3_tests.cpp  vec4_tests.cpp
tests/src/litl-core/renderer/: shaderReflection_tests.cpp
tests/src/litl-core/services/: serviceCollection_tests.cpp
tests/src/litl-core/work/: jobPool_tests.cpp  job_tests.cpp  workDeque_tests.cpp  workScheduler_tests.cpp
tests/src/litl-ecs/: archetypeComponents_tests.cpp  archetype_tests.cpp  chunk_tests.cpp  component_tests.cpp  entityCommands_tests.cpp  entity_tests.cpp  systemGraph_tests.cpp  systemInfoGraph_tests.cpp  system_tests.cpp  world_tests.cpp
tests/src/litl-engine/: frame_tests.cpp  scenegraph_tests.cpp
tests/src/litl-engine/ecs/: archetype_tests.cpp  chunk_tests.cpp  component_tests.cpp  entity_tests.cpp  system_tests.cpp  world_tests.cpp
tests/src/litl-engine/scene/: sceneChangeProcessor_tests.cpp  scene_tests.cpp  scenegraph_tests.cpp  uniformGridPartition_tests.cpp
(+388 files in other folders)
